from enum import IntEnum

class Player(IntEnum):
    X = 1
    Y = 2